working on pause

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ align-items: center;
     position: relative;
 }
 
- #start, #reset {
+ #start, #pause {
 position: absolute;
 top: 50%;
 left: 50%;
@@ -79,8 +79,9 @@ transform: translate(-50%,-50%);
 font-size: 20px;
 }
 
-#reset{
-   display: none;
+
+#pause{
+    display: none;
 }
 
 .active{
